# skynerd-assistant

./: README.md  pyproject.toml
install/linux/: skynerd-assistant.service
install/macos/: com.skynerd.assistant.plist
install/windows/: skynerd-assistant.xml
skynerd_assistant/: __init__.py  __main__.py  cli.py  config.py  daemon.py  state.py
skynerd_assistant/clients/: __init__.py  ollama.py  skynerd.py
skynerd_assistant/monitors/: __init__.py  base.py  calendar.py  email.py  reminders.py  tasks.py  voice.py
skynerd_assistant/notifiers/: __init__.py  desktop.py  slack.py
skynerd_assistant/voice/: __init__.py  listener.py  tts.py
