[project]
name = "skynerd-assistant"
version = "0.1.0"
description = "Local AI Personal Assistant for SkyNerd Control"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PTN Accounting", email = "peter@ptnaccounting.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "plyer>=2.1.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyttsx3>=2.90",
    "ollama>=0.1.0",
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
    "boto3>=1.34.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
skynerd-assistant = "skynerd_assistant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
